# Attention-Based-Interpretable-Survival-Analysis

./: README.md
.ipynb_checkpoints/: surv_proj_LC_4_11_2023-checkpoint.ipynb
mil-dev/: README.md  requirements.txt  setup.py
note/: computational pathology.docx  note.docx  (+2 more)
survivalnet2-dev/: NAM_Interface_Cox.ipynb  README.rst  codecov.yml  cox_example.ipynb  dataloader.py  main.py  model.py  preprocessing.py  pyproject.toml  suv_proj_attn_4_24.ipynb  suv_proj_attn_5_15.ipynb  suv_proj_attn_5_20.ipynb  suv_proj_attn_6_21.ipynb  suv_proj_attn_6_28.ipynb  suv_proj_attn_7_5.ipynb  tox.ini  utils.py
survivalnet2-dev/.circleci/: config.yml
survivalnet2-dev/examples/: TCGA_glioma.csv  parametric_example.ipynb
survivalnet2-dev/scripts/: run_env.sh  run_pylint.sh  run_pytest.sh
survivalnet2-dev/survivalnet2/: __init__.py
survivalnet2-dev/survivalnet2/data/: __init__.py  labels.py
survivalnet2-dev/survivalnet2/estimators/: __init__.py  km.py
survivalnet2-dev/survivalnet2/initializers/: clustering.py
survivalnet2-dev/survivalnet2/layers/: __init__.py  advmtl.py  gradient_reversal.py
survivalnet2-dev/survivalnet2/losses/: __init__.py  cox.py  parametric.py
survivalnet2-dev/survivalnet2/metrics/: __init__.py  brier.py  concordance.py  dcal.py  logrank.py
survivalnet2-dev/survivalnet2/search/: search.py
survivalnet2-dev/survivalnet2/visualization/: __init__.py  km_plot.py
survivalnet2-dev/tests/: test_data.py  test_estimators.py  test_layers.py  test_losses.py  test_metrics.py  test_search.py
survivalnet2-dev/tests/test_data/: test_data_cox_loss.csv
(+4579 files in other folders)
